postgres sequence generation added

--- a/rick-and-morty-in-memory/src/main/resources/application.properties
+++ b/rick-and-morty-in-memory/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
 
 #PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty
 spring.datasource.username=postgres
 spring.datasource.password=MaxB1900
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+
