--- a/rick-and-morty-app/src/main/resources/application.properties
+++ b/rick-and-morty-app/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=MaxB1900
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
