--- a/rick-and-morty-app/src/main/resources/application.properties
+++ b/rick-and-morty-app/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
